# vdc-heatmaps

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
vdc_heatmap_app/: main.py
vdc_heatmap_app/api/: create_heatmap.py  upload_heatmap.py
vdc_heatmap_app/config/: settings.py
vdc_heatmap_app/models/: heatmap_coordinates.py  s3_client.py
