[tool.poetry]
name = "vdc-fastapi"
version = "0.1.0"
description = ""
authors = ["PRIV4TEGRIEFER priv4tegriefer@outlook.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = "^0.104"
numpy = "^1.26.1"
scipy = "^1.11.3"
matplotlib = "^3.8.0"
boto3 = "^1.29.6"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
